.provarCaches/00D5h000009Q6XQEA0/objects/QCLiveChecks__BestPractice__c.object
<CustomObject>
    <description>Custom object to store QC best practices</description>
    <fields>
        <fullName>QCLiveChecks__BestPractice__c</fullName>
        <description>Best practice name</description>
        <label>Best Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ElementType__c</fullName>
        <description>Element Type</description>
        <label>Element Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__ImpactArea__c</fullName>
        <description>Impact Area</description>
        <label>Impact Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__LastModification__c</fullName>
        <description>QC Last Modification date of the rule</description>
        <label>Last Modification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Link__c</fullName>
        <description>Link to the best practice documentation</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Severity__c</fullName>
        <description>Severity</description>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__TimeToFix__c</fullName>
        <label>Time to Fix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QCLiveChecks__Type__c</fullName>
        <description>Low-code or Pro-code</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Best Practice</label>
    <nameField>
        <label>Best Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Best Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>